JWT + Casca da API de cadastro de usuário, atualizar swagger, criar middlewares e separar login em serviço
