# src/controllers/LoginController.js
@@ -1,4 +1,5 @@
 const HttpController = require('./HttpController');
+const LoginService = require('../services/LoginService');
 
 class LoginController extends HttpController {
     // sobrescreve o método da classe HttpController
@@ -16,6 +17,7 @@ class LoginController extends HttpController {
 
         // valida se foi passado no body os campos de login e senha
         if (!body || !body.login || !body.senha) {
+            req.logger.info('requisição de login inválida');
             // retorna um erro para quem chamou a api falando que os paramtros estão inválidos
             return res.status(400).json({
                 status: 400,
@@ -23,10 +25,12 @@ class LoginController extends HttpController {
             });
         }
 
+        const service = new LoginService();
+        const resultado = service.logar(body.login, body.senha);
+
+        req.logger.info('requisição de login realiada com sucesso', `resultado=${JSON.stringify(resultado)}`);
         // devolve a resposta mockada do login em formato json
-        res.json({
-            token: 'token gerado pela api'
-        });
+        res.json(resultado);
     }
 }
 
